Fixed overflow issue

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -245,7 +245,7 @@ h2::selection {
   }
 
   body {
-    overflow: hidden;
+    overflow-x: hidden;
   }
   
 
